<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent">
	<LinearLayout 
	  android:orientation="vertical"
	  android:layout_width="match_parent"
	  android:layout_height="wrap_content"
	  android:paddingBottom="@dimen/activity_vertical_margin"
	  android:paddingLeft="@dimen/activity_horizontal_margin"
	  android:paddingRight="@dimen/activity_horizontal_margin"
	  android:paddingTop="@dimen/activity_vertical_margin"
	  tools:context=".MainActivity" >
	  
        <TextView
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/title_nome" />

	    <LinearLayout 
	        android:orientation="horizontal"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content">
		    <EditText
		        android:id="@+id/alimento_nome"
		        android:layout_width="0dip"
		        android:layout_height="wrap_content"
		        android:inputType="text"
	        	android:layout_weight="1" />
	    </LinearLayout>
	    
        <TextView
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/title_fonte" />
	    
	    <LinearLayout 
	        android:orientation="horizontal"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content">
		    <EditText
		        android:id="@+id/alimento_fonte"
		        android:layout_width="0dip"
		        android:layout_height="wrap_content"
		        android:inputType="text"
	        	android:layout_weight="1" />
	    </LinearLayout>
	    
        <TextView
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/title_carboidrato" />
	    
	    <LinearLayout 
	        android:orientation="horizontal"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content">
		    <EditText
		        android:id="@+id/alimento_carboidrato"
		        android:layout_width="0dip"
		        android:layout_height="wrap_content"
		        android:inputType="number"
	        	android:layout_weight="1" />
	        <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/title_gramas" />
	    </LinearLayout>
	    
        <TextView
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/title_proteina" />
	    
	    <LinearLayout 
	        android:orientation="horizontal"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content">
		    <EditText
		        android:id="@+id/alimento_proteina"
		        android:layout_width="0dip"
		        android:layout_height="wrap_content"
		        android:inputType="number"
	        	android:layout_weight="1" />
	        <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/title_gramas" />
	    </LinearLayout>
	    
	    
        <TextView
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/title_gordura" />
	    
	    <LinearLayout 
	        android:orientation="horizontal"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content">
		    <EditText
		        android:id="@+id/alimento_gordura"
		        android:layout_width="0dip"
		        android:layout_height="wrap_content"
		        android:inputType="number"
	        	android:layout_weight="1" />
	        <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/title_gramas" />
	    </LinearLayout>
	    
        <TextView
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/title_caloria" />
	    
	    <LinearLayout 
	        android:orientation="horizontal"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content">
		    <EditText
		        android:id="@+id/alimento_caloria"
		        android:layout_width="0dip"
		        android:layout_height="wrap_content"
		        android:inputType="number"
	        	android:layout_weight="1" />
	    </LinearLayout>
	
	    <Button
	        android:id="@+id/salvar"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/salvar" />

	</LinearLayout>
</ScrollView>