<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent">
	<LinearLayout 
	  android:orientation="vertical"
	  android:layout_width="match_parent"
	  android:layout_height="wrap_content"
	  android:paddingBottom="@dimen/activity_vertical_margin"
	  android:paddingLeft="@dimen/activity_horizontal_margin"
	  android:paddingRight="@dimen/activity_horizontal_margin"
	  android:paddingTop="@dimen/activity_vertical_margin"
	  tools:context=".MainActivity" >
	  
        <TextView
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/lbAlimento" />

	    <LinearLayout 
	        android:orientation="horizontal"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content">
		    <Spinner
                android:id="@+id/cbAlimentos"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:drawSelectorOnTop="true"
                android:prompt="@string/txtCb" />
	    </LinearLayout>
	    
        <TextView
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/lbQnt" />
	    
	    <LinearLayout 
	        android:orientation="horizontal"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content">
		    <EditText
		        android:id="@+id/rha_quantidade"
		        android:layout_width="0dip"
		        android:layout_height="wrap_content"
		        android:inputType="number"
	        	android:layout_weight="1" />
	    </LinearLayout>
	    
	    <Button
	        android:id="@+id/salvar"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/salvar" />

	</LinearLayout>
</ScrollView>