<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent">
	<LinearLayout 
	  android:orientation="vertical"
	  android:layout_width="match_parent"
	  android:layout_height="wrap_content"
	  android:paddingBottom="@dimen/activity_vertical_margin"
	  android:paddingLeft="@dimen/activity_horizontal_margin"
	  android:paddingRight="@dimen/activity_horizontal_margin"
	  android:paddingTop="@dimen/activity_vertical_margin"
	  tools:context=".MainActivity" >
	  
        <TextView
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/title_nome" />

	    <LinearLayout 
	        android:orientation="horizontal"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content">
		    <EditText
		        android:id="@+id/refeicao_nome"
		        android:layout_width="0dip"
		        android:layout_height="wrap_content"
		        android:inputType="text"
	        	android:layout_weight="1" />
	    </LinearLayout>
	    
	    <Button
	        android:id="@+id/add_alimento"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/add_alimento" />
	    
	    <ListView
	        android:id="@+id/listViewRHA"
	        android:layout_width="fill_parent"
	        android:layout_weight="13"
	        android:layout_height="0dp" >
	    </ListView>
	    
	    <Button
	        android:id="@+id/salvar"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/salvar" />

	</LinearLayout>
</ScrollView>